Db context is now inherit from abstract class to make it versatile for database-oriented migration.

--- a/DisbotNext.Infrastructures/DisbotNext.Infrastructures.Sqlite.csproj
+++ b/DisbotNext.Infrastructures/DisbotNext.Infrastructures.Sqlite.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DisbotNext.Infrastructure.Common\DisbotNext.Infrastructure.Common.csproj" />
+  </ItemGroup>
+
 </Project>
