--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -23,3 +23,17 @@ jobs:
       run: dotnet build --no-restore
     - name: Test
       run: dotnet test --no-build --verbosity normal
+    - name: Publish ubuntu 20.04 x64
+      run: dotnet publish -c Release -r ubuntu.20.04-x64
+    - name: Publish windows 10 x64
+      run: dotnet publish -c Release -r win10-x64
+    - name: Upload ubuntu build artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: DisbotNext_ubuntu_2004_x64
+        path: /home/runner/work/DisbotNext/DisbotNext/DisbotNext/bin/Release/net5.0/ubuntu.20.04-x64/publish/
+    - name: Upload windows build artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: DisbotNext_win10_x64
+        path: /home/runner/work/DisbotNext/DisbotNext/DisbotNext/bin/Release/net5.0/win10-x64/publish/
