--- a/DisbotNext/DisbotNext.csproj
+++ b/DisbotNext/DisbotNext.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="HangFire" Version="1.7.20" />
     <PackageReference Include="Hangfire.LiteDB" Version="0.4.0" />
     <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="1.0.0-beta11" />
+    <PackageReference Include="YahooFinanceApi" Version="2.1.2" />
     <PackageReference Include="ThaiSenLoy" Version="1.0.3" />
   </ItemGroup>
 
