--- a/DisbotNext.Infrastructures/DisbotNext.Infrastructures.Sqlite.csproj
+++ b/DisbotNext.Infrastructures/DisbotNext.Infrastructures.Sqlite.csproj
@@ -11,6 +11,7 @@
     </PackageReference>
     <PackageReference Include="Microsoft.EntityFrameworkCore.Proxies" Version="5.0.4" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="5.0.4" />
+    <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.Abstractions" Version="5.0.5" />
   </ItemGroup>
 
   <ItemGroup>
