--- a/DisbotNext.Infrastructures/DisbotNext.Infrastructures.Sqlite.csproj
+++ b/DisbotNext.Infrastructures/DisbotNext.Infrastructures.Sqlite.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DisbotNext.Infrastructure.Common\DisbotNext.Infrastructure.Common.csproj" />
+    <ProjectReference Include="..\DisbotNext.Infrastructure.Common\DisbotNext.Infrastructures.Common.csproj" />
   </ItemGroup>
 
 </Project>
