--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -1,11 +1,11 @@
-name: Master Merge CI
+name: merge to master
 
 on:
   push:
-    branches: [ master, nightly-build ]
+    branches: [ master ]
 
 jobs:
-  build:
+  build_dotnet_core:
 
     runs-on: ubuntu-latest
 
@@ -29,9 +29,32 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: DisbotNext_ubuntu_2004_x64
-        path: /home/runner/work/DisbotNext/DisbotNext/DisbotNext/bin/Release/net5.0/ubuntu.20.04-x64/publish/
+        path: /home/runner/work/DisbotNext/DisbotNext/DisbotNext.Api/bin/Release/net5.0/ubuntu.20.04-x64/publish/
     - name: Upload windows build artifact
       uses: actions/upload-artifact@v2
       with:
         name: DisbotNext_win10_x64
-        path: /home/runner/work/DisbotNext/DisbotNext/DisbotNext/bin/Release/net5.0/win10-x64/publish/
+        path: /home/runner/work/DisbotNext/DisbotNext/DisbotNext.Api/bin/Release/net5.0/win10-x64/publish/
+  
+  build_node_js:
+
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [10.x, 12.x, 14.x, 15.x]
+
+    steps:
+      - uses: actions/checkout@v2
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v1
+        with:
+          node-version: ${{ matrix.node-version }}
+      - run: npm install
+      - run: npm ci
+      - run: npm run build --if-present
+      - name: Upload dist artifact
+        uses: actions/upload-artifact@v2
+        with:
+          name: DisbotNext_web
+          path: /home/runner/work/DisbotNext/DisBotNext/DisbotNext.Web/dist/
