--- a/.github/workflows/nodejs.yml
+++ b/.github/workflows/nodejs.yml
@@ -8,7 +8,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    defaults:
+      run:
+        working-directory: ./DisbotNext.Web
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js 15.x
