--- a/DisbotNext.Common/DisbotNext.Common.csproj
+++ b/DisbotNext.Common/DisbotNext.Common.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="DSharpPlus" Version="4.0.0-rc3" />
-    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.0.0-rc3" />
+    <PackageReference Include="DSharpPlus" Version="4.1.0" />
+    <PackageReference Include="DSharpPlus.CommandsNext" Version="4.1.0" />
   </ItemGroup>
 
 </Project>
