Image generator refactored

--- a/DisbotNext/DisbotNext.csproj
+++ b/DisbotNext/DisbotNext.csproj
@@ -35,6 +35,9 @@
     <None Update="Assets\tahoma.ttf">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Assets\THSarabunNew.ttf">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
