Add Postgresql implement

--- a/DisbotNext.Api/appsettings.json
+++ b/DisbotNext.Api/appsettings.json
@@ -8,10 +8,10 @@
   },
   "Discord": {
     "BotToken": "",
-    "ReportCron": "0 0 * * *"
+    "ReportCron": "0 5 * * *"
   },
   "ConnectionStrings": {
-    "Default": "Data Source=Local.db"
+    "Default": ""
   },
   "AllowedHosts": "*"
 }
