--- a/DisbotNext/DisbotNext.csproj
+++ b/DisbotNext/DisbotNext.csproj
@@ -1,33 +1,28 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
-
+﻿<Project Sdk="Microsoft.NET.Sdk;Microsoft.NET.Sdk.Publish">
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <Nullable>enable</Nullable>
     <UserSecretsId>558419a3-4609-4e24-a099-75073b8b2008</UserSecretsId>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="HtmlAgilityPack" Version="1.11.32" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="5.0.0" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="5.0.0" />
     <PackageReference Include="HangFire" Version="1.7.20" />
-	<PackageReference Include="Hangfire.MemoryStorage" Version="1.7.0" />
+    <PackageReference Include="Hangfire.MemoryStorage" Version="1.7.0" />
     <PackageReference Include="SixLabors.ImageSharp.Drawing" Version="1.0.0-beta11" />
     <PackageReference Include="YahooFinanceApi" Version="2.1.2" />
   </ItemGroup>
-
   <ItemGroup>
     <ProjectReference Include="..\DisbotNext.Common\DisbotNext.Common.csproj" />
     <ProjectReference Include="..\DisbotNext.Infrastructure.Common\DisbotNext.Infrastructures.Common.csproj" />
-    <ProjectReference Include="..\DisbotNext.Infrastructures\DisbotNext.Infrastructures.Sqlite.csproj" />
+    <ProjectReference Include="..\DisbotNext.Infrastructure.Postgres\DisbotNext.Infrastructure.Postgres.csproj" />
   </ItemGroup>
-
   <ItemGroup>
     <Folder Include="Assets\" />
   </ItemGroup>
-
   <ItemGroup>
     <None Update="Assets\language.jpg">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
@@ -38,6 +33,8 @@
     <None Update="Assets\THSarabunNew.ttf">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Settings.job">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
-
 </Project>
